--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -32,12 +32,13 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <!-- menu-->
-        <materialDesign:ColorZone Grid.Column="0" Background="Gray"  CornerRadius="15 0 0 15">
+        <materialDesign:ColorZone Grid.Column="0" Background="Green"
+  CornerRadius="15 0 0 15">
             <!-- logo-->
             <StackPanel Height="800">
                 <WrapPanel Margin="0 35 5 50" HorizontalAlignment="Center">
                     <Image RenderOptions.BitmapScalingMode="HighQuality" Source="Resources/logo.png" Height="80" Width="80"/>
-                    <TextBlock FontSize="15" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Width="90" Height="44">
+                    <TextBlock Foreground="White" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Width="90" Height="44">
                 Quản Lý
                 <LineBreak />
                 Trồng Trọt
@@ -47,7 +48,7 @@
                     <StackPanel Height="auto">
                         <!--nut trang chu-->
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-                            Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+                            Foreground="White" 
                             materialDesign:ButtonAssist.CornerRadius="6" 
                             Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
                             Margin="0 0 0 0"  >
@@ -61,15 +62,15 @@
 
                         <!--nut hanh chinh-->
                         <Button Name="HanhChinhButton" 
-    Style="{StaticResource MaterialDesignFlatButton}" 
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
-    materialDesign:ButtonAssist.CornerRadius="6" 
-    Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
-    Click="HanhChinhButton_Click">
+                                Style="{StaticResource MaterialDesignFlatButton}" 
+                                Foreground="White" 
+                                materialDesign:ButtonAssist.CornerRadius="6" 
+                                Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
+                                Click="HanhChinhButton_Click">
                             <WrapPanel Width="190">
                                 <materialDesign:PackIcon Kind="City" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="20">
-        Hành Chính
+                                <TextBlock Width="125" VerticalAlignment="Bottom" FontSize="20">
+                                    Hành Chính
                                 </TextBlock>
                                 <materialDesign:PackIcon Kind="ChevronDown" Height="25" Width="25" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
                             </WrapPanel>
@@ -77,40 +78,40 @@
                         <StackPanel Name ="HanhChinhConButton" Visibility="Collapsed">
                             <!--nut con hanh chinh-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"  Command="{Binding CapDoHanhChinhCommand}"
-Width="190" Height="40" Margin="0 5 0 0" 
+                                Foreground="White"  Command="{Binding CapDoHanhChinhCommand}"
+                                Width="190" Height="40" Margin="0 5 0 0" 
                                    >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
                                     <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="15">
-    Cấp Độ Hành Chính
+                                          Cấp Độ Hành Chính
                                     </TextBlock>
                                 </WrapPanel>
                             </Button>
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding DonViHanhChinhCommand}"
-Width="190" Height="40" Margin="0 5 0 0"
+                                Foreground="White" Command="{Binding DonViHanhChinhCommand}"
+                                Width="190" Height="40" Margin="0 5 0 0"
                                     >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
                                     <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="15">
-    Dơn Vị Hành Chính
+                                        Đơn Vị Hành Chính
                                     </TextBlock>
                                 </WrapPanel>
                             </Button>
                         </StackPanel>
                         <!--nut giong cay trong-->
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
-    materialDesign:ButtonAssist.CornerRadius="6" 
-    Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
-    Margin="0 0 0 0" Click="GiongCayTrongButton_Click"  >
+                                Foreground="White" 
+                                materialDesign:ButtonAssist.CornerRadius="6" 
+                                Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
+                                Margin="0 0 0 0" Click="GiongCayTrongButton_Click"  >
                             <WrapPanel Width="190" >
                                 <materialDesign:PackIcon Kind="Leaf" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="20" >
-            Giống Cây
-            <LineBreak/>
-            Trồng
+                                <TextBlock Width="125" VerticalAlignment="Bottom" FontSize="20" >
+                                        Giống Cây
+                                        <LineBreak/>
+                                        Trồng
                                 </TextBlock>
                                 <materialDesign:PackIcon Kind="ChevronDown" Height="25" Width="25" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                             </WrapPanel>
@@ -119,7 +120,7 @@ Width="190" Height="40" Margin="0 5 0 0"
                         <StackPanel Name="GiongCayTrongConButton" Visibility="Collapsed">
                             <!--nut con 1-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-        Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding CayTrongCommand}"
+        Foreground="White" Command="{Binding CayTrongCommand}"
         Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -131,7 +132,7 @@ Width="190" Height="40" Margin="0 5 0 0"
                             <!--nut con 2-->
                             <Button 
                                 Style="{StaticResource MaterialDesignFlatButton}"
-        Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding VungTrongCommand}"
+        Foreground="White" Command="{Binding VungTrongCommand}"
         Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="MapMarkerRadiusOutline" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -141,15 +142,17 @@ Width="190" Height="40" Margin="0 5 0 0"
                                 </WrapPanel>
                             </Button>
                         </StackPanel>
+                        
                         <!--nut phan bon-->
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+    Foreground="White" 
     materialDesign:ButtonAssist.CornerRadius="6" 
     Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
     Margin="0 0 0 0" Click="PhanBonButton_Click"  >
+                            
                             <WrapPanel Width="190" >
                                 <materialDesign:PackIcon Kind="SoySauce" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                <TextBlock Width="110" VerticalAlignment="Bottom" FontSize="20" >
+                                <TextBlock Width="125" VerticalAlignment="Bottom" FontSize="20" >
             Phân Bón
                                 </TextBlock>
                                 <materialDesign:PackIcon Kind="ChevronDown" Height="25" Width="25" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
@@ -159,7 +162,7 @@ Width="190" Height="40" Margin="0 5 0 0"
                         <StackPanel Name="PhanBonConButton" Visibility="Collapsed">
                             <!--nut con 1-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+Foreground="White"
                                 Command ="{Binding PhanloaiPBCommand}" Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -170,7 +173,7 @@ Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
                             </Button>
                             <!--nut con 2-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding CosoPBCommand}"
+Foreground="White" Command="{Binding CosoPBCommand}"
 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Shop" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -180,9 +183,10 @@ Width="190" Height="40" Margin="0 5 0 0" >
                                 </WrapPanel>
                             </Button>
                         </StackPanel>
-
+                
+                        <!-- nut thuoc bao ve thuc vat-->
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+    Foreground="White" 
     materialDesign:ButtonAssist.CornerRadius="6" 
     Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
     Margin="0 0 0 0"  Click="ThuocbvtvButton_Click">
@@ -200,7 +204,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                         <StackPanel Name="ThuocbvtvButton" Visibility="Collapsed">
                             <!--nut con 1-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding PhanLoaiThuocBVTVCommand}"
+Foreground="White" Command="{Binding PhanLoaiThuocBVTVCommand}"
 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Apps" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -211,7 +215,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                             </Button>
                             <!--nut con 2-->
                             <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding CosoThuocBVTVCommand}"
+Foreground="White" Command="{Binding CosoThuocBVTVCommand}"
 Width="190" Height="40" Margin="0 5 0 0" >
                                 <WrapPanel Width="190">
                                     <materialDesign:PackIcon Kind="Shop" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
@@ -224,7 +228,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
 
 
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+    Foreground="White" 
     materialDesign:ButtonAssist.CornerRadius="6" 
     Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" Command="{Binding SVGHVTSCommand}"
     Margin="0 0 0 0"  >
@@ -240,7 +244,7 @@ Width="190" Height="40" Margin="0 5 0 0" >
                         </Button>
 
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-    Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+    Foreground="White" 
     materialDesign:ButtonAssist.CornerRadius="6" 
     Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
     Margin="0 0 0 0" >
@@ -254,13 +258,13 @@ Width="190" Height="40" Margin="0 5 0 0" >
                         </Button>
 
                         <Button Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" 
+Foreground="White" 
 materialDesign:ButtonAssist.CornerRadius="6" 
 Width="auto" Height="60" materialDesign:RippleAssist.Feedback="White" 
 Margin="0 0 0 0"   Click="HeThongButton_Click">
                             <WrapPanel Width="190" >
                                 <materialDesign:PackIcon Kind="Settings" VerticalAlignment="Center" Height="30" Width="30" Margin="0 0 10 0" />
-                                <TextBlock Width="120" VerticalAlignment="Bottom"  FontSize="20" >
+                                <TextBlock Width="125" VerticalAlignment="Bottom"  FontSize="20" >
         Hệ Thống
                                 </TextBlock>
                                 <materialDesign:PackIcon Kind="ChevronDown" Height="25" Width="25" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
@@ -270,11 +274,11 @@ Margin="0 0 0 0"   Click="HeThongButton_Click">
                         <StackPanel Name="HeThongButton" Visibility="Collapsed">
                             <!--nut con 1-->
                             <Button Content="Quản Lý Người Dùng" Style="{StaticResource MaterialDesignFlatButton}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}" Command="{Binding QLNDCommand}"
+Foreground="White" Command="{Binding QLNDCommand}"
 Width="190" Height="40" Margin="0 5 0 0" HorizontalContentAlignment="Left"/>
                             <!--nut con 2-->
                             <Button Content="Lịch Sử Truy Cập" Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding LSTCCommand}"
-Foreground="{DynamicResource PrimaryHueLightForegroundBrush}"
+Foreground="White"
 Width="190" Height="40" Margin="0 5 0 0" HorizontalContentAlignment="Left"/>
                         </StackPanel>
                     </StackPanel>
