--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -8,61 +8,69 @@
          xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         DataContext="{StaticResource LoginVM}"
         mc:Ignorable="d"
-        Title="loginWindow" Height="550" Width="850" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" >
+        Title="loginWindow" Height="550" Width="850" BorderBrush="Transparent" WindowStyle="ToolWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" >
     <Grid x:Name="grid" RenderTransformOrigin="0.5,0.5">
-        <Grid.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform ScaleX="-1"/>
-                <SkewTransform/>
-                <RotateTransform/>
-                <TranslateTransform/>
-            </TransformGroup>
-        </Grid.RenderTransform>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="222*"/>
+            <ColumnDefinition Width="203*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
-            <ImageBrush ImageSource="/niem-vui-duoc-mua-56-0.jpg"/>
+            <ImageBrush ImageSource="/Resources/anhnguoinongdan.jpg"/>
         </Grid.Background>
-        <Grid x:Name="login1" HorizontalAlignment="Left" Height="283" Margin="48,171,0,0" VerticalAlignment="Top" Width="375" RenderTransformOrigin="0.5,0.5" >
-            <Grid.Background>
-                <SolidColorBrush Color="White" Opacity="0.4"/>
-            </Grid.Background>
-            <Grid.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Grid.RenderTransform>
-            <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Width="284" Margin="0,0,0,209" Height="58" VerticalAlignment="Bottom"><Run Language="vi-vn" Text="Chào Mừng" FontSize="45" FontFamily="Georgia Pro Black" BaselineAlignment="Center" Foreground="#FF06AF2F"/></TextBlock>
-            <TextBox
+        <Image Source="/Resources/logo.png" Height="50" Width="50" Margin="23,10,371,474" />
+        <TextBlock FontSize="12" FontWeight="Bold" HorizontalAlignment="Left"
+                   VerticalAlignment="Top" Width="210" Height="33"
+                   Margin="73,19,0,0" Foreground="DarkOliveGreen">
+            HỆ THỐNG QUẢN LÝ TRỒNG TRỌT
+            <LineBreak />
+            TỈNH BẮC NINH
+        </TextBlock>
+        <Border CornerRadius="15" BorderThickness="2" 
+                HorizontalAlignment="Left" VerticalAlignment="Center" Height="263" Width="277" 
+                BorderBrush="Transparent" Grid.Column="1">
+            <Border.Background>
+                <SolidColorBrush Color="White" Opacity="0.7"/>
+            </Border.Background>
+            <Grid x:Name="login1" RenderTransformOrigin="0.5,0.5">
+                <TextBlock TextWrapping="Wrap" Margin="32,16,30,0" Height="49"
+                           VerticalAlignment="Top" FontFamily="{StaticResource CustomFont}" FontWeight="Bold">
+                    <Run Language="vi-vn" Text="Đăng nhập" FontSize="40" BaselineAlignment="Center" Foreground="DarkOliveGreen"/></TextBlock>
+                <TextBox
                     materialDesign:HintAssist.Hint="Tài Khoản" Text="{Binding TenNguoiDung}"
-                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="58,0,58,145" Height="46" VerticalAlignment="Bottom" />
-            <PasswordBox x:Name="FloatingPasswordBox" materialDesign:HintAssist.Hint="Mật Khẩu"
-                     Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="58,0,58,90" Height="46" VerticalAlignment="Bottom">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="PasswordChanged">
-                        <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
+                    Padding="0"
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,78,0,0" Height="34" VerticalAlignment="Top" HorizontalAlignment="Center" Width="202" />
+                <PasswordBox x:Name="FloatingPasswordBox" materialDesign:HintAssist.Hint="Mật Khẩu"
+                     Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0,126,0,0" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Width="202">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="PasswordChanged">
+                            <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
              CommandParameter="{Binding ElementName=FloatingPasswordBox}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </PasswordBox>
-            <Button
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </PasswordBox>
+                <Button
                     Style="{StaticResource MaterialDesignRaisedAccentButton}"
                     ToolTip="Resource name: MaterialDesignRaisedAccentButton"
                     materialDesign:ButtonAssist.CornerRadius="15"
-                    materialDesign:RippleAssist.Feedback="#DD000000" Margin="52,0,64,45" 
+                    materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,180,0,0" 
                     Content="Đăng Nhập" FontSize="17" 
                     Command="{Binding LoginCommand}"
-                    FontFamily="Segoe UI Black" Foreground="#DDFFFFFF" Height="32" VerticalAlignment="Bottom" Grid.Row="1"/>
-            <TextBlock HorizontalAlignment="Left" Height="21" Margin="132,0,0,14" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="104" Grid.Row="1"><Run Language="vi-vn" Text="Chưa"/><Run Text=" có tài khoản?"/></TextBlock>
-            <Button
+                    FontFamily="Segoe UI Black" Foreground="#DDFFFFFF" Height="32" VerticalAlignment="Top" HorizontalAlignment="Center" Width="202" Background="#FF0C8329" BorderBrush="{x:Null}"/>
+                <TextBlock HorizontalAlignment="Right" Height="14" Margin="0,0,92,28" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="103"><Run Language="vi-vn" Text="Chưa"/><Run Text=" có tài khoản?"/></TextBlock>
+                <Button
                     Style="{StaticResource MaterialDesignRaisedAccentButton}"
                     ToolTip="Resource name: MaterialDesignRaisedAccentButton"
-                    materialDesign:RippleAssist.Feedback="#DD000000" Margin="233,0,79,19" 
-                    Content="Đăng Kí" FontSize="12" Foreground="Pink"
+                    
+                    materialDesign:RippleAssist.Feedback="#DD000000" Margin="0,0,43,26" 
+                    Content="Đăng kí" FontSize="12" Foreground="DarkOliveGreen"
                     Background="Transparent"
                     BorderBrush="Transparent"
-                    Padding="0" Height="17" VerticalAlignment="Bottom" Grid.Row="1"/>
-        </Grid>
+                    Padding="0" Height="16" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="59" Click="Button_Click"/>
+            </Grid>
+        </Border>
+        
+        
+        <!-- frame cho dang ky va dang nhap-->
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Grid.Column="1" HorizontalAlignment="Left" Width="277" />
     </Grid>
 </Window>
