--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -107,7 +107,7 @@ WindowStartupLocation="CenterScreen"
                             Content="Thêm" 
                             Margin="5" 
                             Width="100" 
-                            Background="DeepPink"  
+                            Background="Pink"  
                             materialDesign:ButtonProgressAssist.IsIndeterminate="True" 
                             materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
                         <Button Command="{Binding EditCommand}" 
